Add alt attributes and optimize images with TinyPNG

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <div class="container">
                 <div class="header__nav">
                     <a href="#" class="header__logo">
-                        <img class="header__logo-pic" src="/images/logo.png" alt="">
+                        <img class="header__logo-pic" src="/images/logo.png" alt="logo">
                     </a>
-                    <button class="header__btn">
-                        <img class="header__btn-pic" src="/images/header-menu-btn.png" alt="">
+                    <button class="header__btn" aria-label="Open menu">
+                        <img class="header__btn-pic" src="/images/header-menu-btn.png" alt="button">
                     </button>
                 </div>
                 <div class="header__content">
@@ -36,11 +36,11 @@
         </div>
         <div class="partners">
             <div class="partners__inner">
-                <img src="images/partner-1.png" alt="" class="partners__inner-img">
-                <img src="images/partner-2.png" alt="" class="partners__inner-img">
-                <img src="images/partner-3.png" alt="" class="partners__inner-img">
-                <img src="images/partner-4.png" alt="" class="partners__inner-img">
-                <img src="images/partner-5.png" alt="" class="partners__inner-img">
+                <img src="images/partner-1.png" alt="partner's logo" class="partners__inner-img">
+                <img src="images/partner-2.png" alt="partner's logo" class="partners__inner-img">
+                <img src="images/partner-3.png" alt="partner's logo" class="partners__inner-img">
+                <img src="images/partner-4.png" alt="partner's logo" class="partners__inner-img">
+                <img src="images/partner-5.png" alt="partner's logo" class="partners__inner-img">
             </div>
         </div>
     </header>
@@ -63,7 +63,7 @@
                             With More than 10 Years of Knowledge and Expertise we Design and Code Websites and Apps, We Build Brands and Help Them Succeed
                         </blockquote>
                         <div class="blockquote__author">
-                            <img class="blockquote__author-photo" src="./images/blockquote-author-photo-1.svg" alt="" >
+                            <img class="blockquote__author-photo" src="./images/blockquote-author-photo-1.svg" alt="autor's photo" >
                             <div class="blockquote__author-about">
                                 <p class="blockquote__author-name">
                                     Genevieve Rodriquez
@@ -91,13 +91,13 @@
             </div>
             <div class="project__box">
                 <div class="project__box-block">
-                    <img src="./images/project-1.jpg" alt="" class="project__box-img">
+                    <img src="./images/project-1.jpg" alt="project's photo" class="project__box-img">
                     <div class="project__blockquote-box">
                         <blockquote class="blockquote">
                             “In my history of working with trade show vendors, I can honestly say that there is not one company that I've ever worked with that has better service than Exhibit Systems.”
                         </blockquote>
                         <div class="project__blockquote__author">
-                            <img class="project__blockquote__author-photo" src="./images/person/1-1.png" alt="">
+                            <img class="project__blockquote__author-photo" src="./images/person/1-1.png" alt="author's photo">
                             <div class="project__blockquote__author-about">
                                 <p class="project__blockquote__author-name">
                                     Angel Armstrong
@@ -136,13 +136,13 @@
                     <a href="#" class="link">See Case Study</a>
                 </section>
                 <div class="project__box-block">
-                    <img src="./images/project-2.jpg" alt="" class="project__box-img">
+                    <img src="./images/project-2.jpg" alt="project's photo" class="project__box-img">
                     <div class="project__blockquote-box project__blockquote-box--two">
                         <blockquote class="blockquote">
                             “I know they are going to be honest with me. I am not going to get a subpar product; I know it is going to be good. That is the number one advantage of working with Exhibit Systems.
                         </blockquote>
                         <div class="project__blockquote__author">
-                            <img class="project__blockquote__author-photo" src="./images/person/2-2.png" alt="">
+                            <img class="project__blockquote__author-photo" src="./images/person/2-2.png" alt="author's photo">
                             <div class="project__blockquote__author-about">
                                 <p class="project__blockquote__author-name">
                                     Lina Har
@@ -157,13 +157,13 @@
             </div>
             <div class="project__box">
                <div class="project__box-block">
-                    <img src="./images/project-3.jpg" alt="" class="project__box-img">
+                    <img src="./images/project-3.jpg" alt="project's photo" class="project__box-img">
                     <div class="project__blockquote-box">
                         <blockquote class="blockquote">
                             “Exhibit Systems is not a provider. They are not a supplier. They are a partner with expertise in making trade shows effective.”
                         </blockquote>
                         <div class="project__blockquote__author">
-                            <img class="project__blockquote__author-photo" src="./images/person/1-1.png" alt="">
+                            <img class="project__blockquote__author-photo" src="./images/person/1-1.png" alt="author's photo">
                             <div class="project__blockquote__author-about">
                                 <p class="project__blockquote__author-name">
                                     Eunice Oliver
@@ -355,16 +355,16 @@
                         Feel free to get in touch with us vai email
                     </p>
                     <a class="footer__nav-email" href="#">info.webovio@gmail.com</a>
-                    <ul class="social">
+                    <div class="social">
                         <a href="#" class="social-links">
-                            <img src="./images/social-icons.png" alt="" class="social-img">
+                            <img src="./images/social-icons.png" alt="social icon" class="social-img">
                         </a>
-                    </ul>
+                    </div>
                 </div>
             </div>
             <div class="footer__bottom">
                 <a href="#" class="footer-logo footer__bottom-item">
-                    <img src="./images/footer-logo.png" alt="" class="footer__logo-img">
+                    <img src="./images/footer-logo.png" alt="logo" class="footer__logo-img">
                 </a>
                 <p class="footer__bottom-text footer__bottom-item">
                     © 2020@webovio. All Rights Reserved.
