--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <div class="container">
                 <div class="header__nav">
                     <a href="#" class="header__logo">
-                        <img class="header__logo-pic" src="/images/logo.png" alt="logo">
+                        <img class="header__logo-pic" src="images/logo.png" alt="logo">
                     </a>
                     <button class="header__btn" aria-label="Open menu">
-                        <img class="header__btn-pic" src="/images/header-menu-btn.png" alt="button">
+                        <img class="header__btn-pic" src="images/header-menu-btn.png" alt="button">
                     </button>
                 </div>
                 <div class="header__content">
